--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "body-parser": "~1.12.4",
+    "cors": "^2.7.1",
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "morgan": "~1.5.3"
