--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.7.1",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "express-validator": "^2.20.8",
     "morgan": "~1.5.3"
   },
   "repository": {
