--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "express-validator": "^2.20.8",
+    "mongoose": "^4.5.7",
     "morgan": "~1.5.3"
   },
   "repository": {
