--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": "6.2.1"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.12.4",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
