--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "~1.12.4",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.12.4",
     "express-validator": "^2.20.8",
     "mongoose": "^4.5.7",
