--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "node": "6.2.1"
   },
   "dependencies": {
+    "asyncawait": "^1.0.6",
+    "axios": "^0.13.1",
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.4.1",
     "body-parser": "~1.12.4",
     "cors": "^2.7.1",
-    "debug": "~2.2.0",
+    "crypto": "0.0.3",
     "dotenv": "^2.0.0",
     "express": "~4.12.4",
     "express-validator": "^2.20.8",
+    "jsonwebtoken": "^7.1.6",
+    "lodash": "^4.14.0",
+    "moment": "^2.14.1",
     "mongoose": "^4.5.7",
-    "morgan": "~1.5.3"
+    "morgan": "~1.5.3",
+    "nodemailer": "^2.5.0"
   },
   "repository": {
     "type": "git",
