--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "moment": "^2.14.1",
     "mongoose": "^4.5.7",
     "morgan": "~1.5.3",
-    "nodemailer": "^2.5.0"
+    "nodemailer": "^2.5.0",
+    "shortid": "^2.2.6"
   },
   "repository": {
     "type": "git",
