--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^4.5.7",
     "morgan": "~1.5.3",
     "nodemailer": "^2.5.0",
+    "request-ip": "^1.2.2",
     "shortid": "^2.2.6"
   },
   "repository": {
